--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
    <head>
       <meta charset="utf-8">
-      <title>Cheeky Chimps Club</title>
+      <title>Cheeky Chimps Club one</title>
       <meta name="author" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="stylesheet" type="text/css" href="assets/css/shortcodes.css?v=243234">
