--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
    <head>
       <meta charset="utf-8">
-      <title>Cheeky Chimps Club one</title>
+      <title>Cheeky Chimps Club</title>
       <meta name="author" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <link rel="stylesheet" type="text/css" href="assets/css/shortcodes.css?v=243234">
-      <link rel="stylesheet" type="text/css" href="assets/css/style.css?v=3454654">
+      <link rel="stylesheet" type="text/css" href="assets/css/style.css?v=879879">
       <link rel="stylesheet" type="text/css" href="assets/css/responsive.css?v=86876855">
       <link rel="stylesheet" type="text/css" href="assets/dist/aos.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.3.11/tiny-slider.css">
@@ -474,12 +474,12 @@
                      <div class="row">
                         <div class="col-md-12">
                            <ul class="social-item">
-                              <li><a href="#"><img src="assets/images/icon/twitter.png?v=789789"></a></li>
+                              <li><a target="_blank" href="https://www.twitter.com/cheeky__chimps/"><img src="assets/images/icon/twitter.png?v=789789"></a></li>
                               <li>
-                                 <a href="#">
+                                 <a target="_blank" href="https://www.instagram.com/cheeky__chimps/">
                                     <img src="assets/images/icon/instagram.png?v=78978978">
                               </li>
-                              <li><a href="#"><img src="assets/images/icon/dillongo.png?v=45754567"></a></li>
+                              <li><a target="_blank" href="https://discord.gg/Ct5HCPH9"><img src="assets/images/icon/dillongo.png?v=45754567"></a></li>
                            </ul>
                            <img src="assets/images/logo/logo_dark.png?v=33435345" style=" max-width: 125px;">
                            <p class="mfont pt-4 cpy sub-heading aos-item aos-init aos-animate text-center" data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="200" >It could be nothing...</p>
